# agent-template

./: README.md  completion-ledger.md  decision-log.md  pyproject.toml  repomix.config.json  request-plan.md  spec.md
.agent_template/: state.json
.agent_template/artifacts/runs/35bea808-4e9a-4937-9648-5ef15f10b903/: result.json  state.json
.agent_template/artifacts/runs/aeb555f9-976f-4837-a1c5-b0393b3997bf/: result.json  state.json
.github/: copilot-instructions.md
.github/agents/: BackendSupervisor.agent.md  FrontendSupervisor.agent.md  Full-StackSupervisor.agent.md  Implementer.agent.md  MemoryResearcher.agent.md  PRManager.agent.md
.github/instructions/: after-failed-attempt.instructions.md  reflection-trigger-policy.instructions.md
.memories/: 00index.md  How do we validate packaged CLI verification in this project.md
.tmp/: pr1_test_desktop_shell_verifier.patch  review-state.json
.tmp/memory-check/: state.json
.tmp/pr2-final/: state.json
.tmp/request-review/: state.json
src/agent_template/: __init__.py  cli.py  config.py  models.py
src/agent_template/browser/: playwright_runner.py
src/agent_template/ledger/: reflection.py  state_store.py
src/agent_template/milestones/: desktop_shell.yaml
src/agent_template/runtime/: artifact_store.py  process_manager.py  run_once.py  snapshots.py
src/agent_template/verifiers/: browser_checks.py  desktop_shell.py
tests/: test_artifact_store.py  test_bootstrap.py  test_cli.py  test_desktop_shell_verifier.py  test_reflection.py  test_run_once.py  test_state_store.py
(+10 files in other folders)
